librados: add RadosClient to conf observers

Commit 306eebe05bec1220b2477a66b6501da222bacdfc added the RadosClient to
the config observer interface but forgot to add it to the observer list.
This meant that the RadosClient was never receiving callbacks to
handle_conf_change. Commit a8a23747aa081d938c9b277ab42507dd506bf6c2
exposed this issue because the mon timeout was configured at run-time.

Fixes: https://tracker.ceph.com/issues/48030
Fixes: a8a23747aa081d938c9b277ab42507dd506bf6c2
Fixes: 306eebe05bec1220b2477a66b6501da222bacdfc
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>